# botlearn

./: .gitignore  ARCHITECTURE.drawio  Liste_exercices_no_cache.drawio  README.md  Untitled Diagram.drawio  captain-definition
Docker/: .dockerignore  (+3 more)
backend/: .gitignore  .isort.cfg  Pipfile  db.sqlite3-shm  db.sqlite3-wal  gunicorn-conf.py  manage.py  pyproject.toml  setup.cfg
backend/accounts/: apps.py  managers.py
backend/accounts/admin/: __init__.py
backend/accounts/migrations/: 0001_initial.py  0002_user_anonymous.py
backend/accounts/models/: user.py
backend/accounts/serializers/: token.py  user.py
backend/accounts/signals/: user.py
backend/accounts/urls/: __init__.py  token.py  user.py
backend/accounts/views/: token.py  user.py
backend/bot/: admin.py  apps.py  chatterbot.py  models.py  selection.py  serializers.py  trainer.py  views.py
backend/bot/files/: aide.yml  boucle.yml  conditions.yml  fichiers.yml  fonctions.yml  programmation.yml  recursivite.yml  string.yml  structure.yml  variables.yml
backend/bot/logic/: __init__.py  best_match.py  logic_adapter.py  mathematical_evaluation.py  own_logic.py  specific_response.py  time_adapter.py  unit_conversion.py
backend/bot/migrations/: 0001_initial.py  0002_auto_20200406_0728.py  0003_auto_20200421_1000.py  0004_statement.py  0005_auto_20200612_1631.py  0006_auto_20200615_0011.py  0007_auto_20200615_0930.py  0008_auto_20200615_1229.py  0009_auto_20200615_1526.py
backend/bot/signals/: answer.py  question.py
backend/bot/urls/: __init__.py  bot.py
backend/exercises/: __init__.py  apps.py
backend/exercises/admin/: __init__.py
backend/exercises/filters/: exercise.py  session.py  submission.py
backend/exercises/migrations/: 0001_initial.py  0002_auto_20200224_1616.py  0002_auto_20200226_0726.py  0002_auto_20200229_1933.py  0002_auto_20200415_0959.py  0003_auto_20200224_1623.py  0003_auto_20200302_0951.py  0003_auto_20200302_1501.py  0003_errorsexercise.py  0004_auto_20200224_2300.py  0004_auto_20200305_1318.py  (+23 more)
backend/memoire/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/sandbox/: __init__.py  admin.py  apps.py  docker_profiles.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/ssl/: cert.pem  fullchain.pem  privekey.pem
(+239 files in other folders)
